[gd_scene load_steps=5 format=2]

[ext_resource path="res://LevelTriggers/Turret.gd" type="Script" id=1]

[sub_resource type="SpatialMaterial" id=1]
flags_transparent = true
albedo_color = Color( 1, 0, 0, 0.568627 )

[sub_resource type="SphereMesh" id=2]
material = SubResource( 1 )

[sub_resource type="SphereShape" id=3]

[node name="Turret" type="Area"]
collision_mask = 2
script = ExtResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 10, 0, 0, 0, 10, 0, 0, 0, 10, 0, 0, 0 )
mesh = SubResource( 2 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 10, 0, 0, 0, 10, 0, 0, 0, 10, 0, 0, 0 )
shape = SubResource( 3 )

[node name="Base" type="CSGSphere" parent="."]

[node name="Barrel" type="CSGCylinder" parent="Base"]
transform = Transform( 0.5, 0, 0, 0, -4.88762e-07, -0.5, 0, 3, -8.14603e-08, 0.0132075, 0.432317, -0.784133 )
cone = true

[node name="Position3D" type="Position3D" parent="Base/Barrel"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.023899, -0.790099, 0.0223069 )

[node name="RayCast" type="RayCast" parent="Base"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.414883, 0 )
cast_to = Vector3( 0, 0, -5 )

[node name="Timer" type="Timer" parent="."]
[connection signal="body_entered" from="." to="." method="_on_Turret_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Turret_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
